Added 02-deploy.sh and minor fix to label name in canary-deployment.yaml

--- a/strategies/canary/01-kubernetes-native/manifests/deployment-canary.yaml
+++ b/strategies/canary/01-kubernetes-native/manifests/deployment-canary.yaml
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       labels:
-        app: myapp
+        app: myapp-canary
     spec:
       containers:
       - name: myapp-canary
