--- a/strategies/canary/01-kubernetes-native/manifests/deployment.yaml
+++ b/strategies/canary/01-kubernetes-native/manifests/deployment.yaml
@@ -6,11 +6,13 @@ spec:
   selector:
     matchLabels:
       app: myapp
+      instance: stable
   replicas: 10
   template:
     metadata:
       labels:
         app: myapp
+        instance: stable
     spec:
       containers:
       - name: myapp
@@ -18,7 +20,7 @@ spec:
         resources:
           limits:
             memory: "128Mi"
-            cpu: "500m"
+            cpu: "100m"
         ports:
         - containerPort: 8000
         - containerPort: 8080
