update to canary helm

--- a/strategies/canary/02-helm/canary-chart/Chart.yaml
+++ b/strategies/canary/02-helm/canary-chart/Chart.yaml
@@ -6,3 +6,8 @@ type: application
 
 version: 0.1.0
 appVersion: 1.16.0
+
+dependencies:
+- name: prometheus-operator
+  version: "8.13.8"
+  repository: "@stable"
