--- a/strategies/canary/02-helm/canary-chart/values.yaml
+++ b/strategies/canary/02-helm/canary-chart/values.yaml
@@ -11,3 +11,7 @@ canary:
 service:
   type: LoadBalancer
   port: 80
+
+prometheus-operator:
+  prometheusOperator:
+    createCustomResource: false
