--- a/strategies/canary/02-helm/canary-chart/templates/deployment-canary.yaml
+++ b/strategies/canary/02-helm/canary-chart/templates/deployment-canary.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp-canary
+  name: myapp-helm-canary
 spec:
   selector:
     matchLabels:
-      app: myapp
-      instance: myapp-canary
+      app: myapp-helm
+      instance: myapp-helm-canary
   replicas: {{ .Values.canary.replicas }}
   template:
     metadata:
       labels:
-        app: myapp
-        instance: myapp-canary
+        app: myapp-helm
+        instance: myapp-helm-canary
     spec:
       containers:
-      - name: myapp-canary
+      - name: myapp-helm-canary
         image: "{{ .Values.image }}:{{ .Values.canary.imageTag }}"
         resources:
           limits:
