--- a/strategies/canary/02-helm/canary-chart/templates/deployment.yaml
+++ b/strategies/canary/02-helm/canary-chart/templates/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: myapp-helm
 spec:
   selector:
     matchLabels:
-      app: myapp
-      instance: myapp-stable
+      app: myapp-helm
+      instance: myapp-helm-stable
   replicas: {{ .Values.stable.replicas }}
   template:
     metadata:
       labels:
-        app: myapp
-        instance: myapp-stable
+        app: myapp-helm
+        instance: myapp-helm-stable
     spec:
       containers:
-      - name: myapp
+      - name: myapp-helm
         image: "{{ .Values.image }}:{{ .Values.stable.imageTag }}"
         resources:
           limits:
