--- a/strategies/canary/02-helm/canary-chart/templates/service.yaml
+++ b/strategies/canary/02-helm/canary-chart/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp
+  name: myapp-helm
 spec:
   selector:
-    app: myapp
+    app: myapp-helm
   ports:
   - name: metrics
     port: 8000
