--- a/strategies/canary/02-helm/canary-chart/templates/servicemonitor.yaml
+++ b/strategies/canary/02-helm/canary-chart/templates/servicemonitor.yaml
@@ -1,12 +1,12 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: myapp
+  name: myapp-helm
   labels:
-    release: myapp
+    release: myapp-helm
 spec:
   selector:
     matchLabels:
-      app: myapp
+      app: myapp-helm
   endpoints:
   - port: metrics
