--- a/strategies/canary/01-kubernetes-native/manifests/deployment-canary.yaml
+++ b/strategies/canary/01-kubernetes-native/manifests/deployment-canary.yaml
@@ -1,7 +1,11 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:
+metadata:  
   name: myapp-canary
+  labels:
+    app: myapp
+  annotations:
+    linkerd.io/inject: enabled
 spec:
   selector:
     matchLabels:
@@ -13,10 +17,12 @@ spec:
       labels:
         app: myapp
         instance: canary
+      annotations:
+        linkerd.io/inject: enabled
     spec:
       containers:
       - name: myapp-canary
-        image: lmregistryacr.azurecr.io/canary-app:v1
+        image: liammoat/canary-app:v1
         resources:
           limits:
             memory: "128Mi"
