--- a/strategies/canary/01-kubernetes-native/manifests/servicemonitor.yaml
+++ b/strategies/canary/01-kubernetes-native/manifests/servicemonitor.yaml
@@ -2,11 +2,15 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: myapp
+  # namespace: canary-native
   labels:
     release: myapp
 spec:
   selector:
     matchLabels:
       app: myapp
+  # namespaceSelector:
+  #   - canary-native
+  #   any: true
   endpoints:
   - port: metrics
