--- a/strategies/canary/04-service-mesh/manifests/fortio.yaml
+++ b/strategies/canary/04-service-mesh/manifests/fortio.yaml
@@ -14,7 +14,13 @@ spec:
     spec:
       containers:
       - name: fortio
-        image: fortio/fortio:latest_release
+        image: fortio/fortio:latest_release          
+        args: 
+         - "load"
+         - "-allow-initial-errors"  
+         - "-t"       
+         - "0"
+         - "http://myapp:8080/"
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
