--- a/strategies/canary/04-flagger-with-nginx/manifests/canary.yaml
+++ b/strategies/canary/04-flagger-with-nginx/manifests/canary.yaml
@@ -21,16 +21,12 @@ spec:
     threshold: 5    # max number of failed metric checks before rollback
     stepWeight: 10  # canary increment step
     maxWeight: 100  # max traffic percentage routed to canary
-
-
-    # enable metrics when you're sure the traffic is coming through to canary and is scraped by flagger-promethues
-
-    # metrics:
-    # - name: request-success-rate # minimum req success rate (non 5xx responses) percentage (0-100)        
-    #   thresholdRange: 
-    #     min: 99
-    #   interval: 1m
-    # - name: request-duration    # maximum req duration P99 milliseconds
-    #   thresholdRange:
-    #     max: 500
-    #   interval: 1m
+    # enable metrics when you're sure the traffic is coming through to canary and is scraped by flagger-promethues    metrics:
+    - name: request-success-rate # minimum req success rate (non 5xx responses) percentage (0-100)        
+      thresholdRange: 
+        min: 99
+      interval: 1m
+    - name: request-duration    # maximum req duration P99 milliseconds
+      thresholdRange:
+        max: 500
+      interval: 1m
