--- a/strategies/canary/04-flagger-with-nginx/manifests/deployment.yaml
+++ b/strategies/canary/04-flagger-with-nginx/manifests/deployment.yaml
@@ -13,7 +13,10 @@ spec:
   template:
     metadata:    
       labels:
-        app: myapp        
+        app: myapp  
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8000"      
     spec:
       containers:
       - name: myapp
