image pull always

--- a/strategies/canary/04-flagger-with-nginx/manifests/deployment.yaml
+++ b/strategies/canary/04-flagger-with-nginx/manifests/deployment.yaml
@@ -21,6 +21,7 @@ spec:
       containers:
       - name: myapp
         image: liammoat/canary-app:v1
+        imagePullPolicy: Always
         resources:
           limits:
             memory: "128Mi"
