--- a/strategies/canary/02-kubernetes-with-helm/canary-chart/templates/deployment-canary.yaml
+++ b/strategies/canary/02-kubernetes-with-helm/canary-chart/templates/deployment-canary.yaml
@@ -1,18 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:
-  name: myapp-helm-canary
+metadata:  
+  name: myapp-canary
+  labels:
+    app: myapp
 spec:
   selector:
     matchLabels:
-      app: myapp-helm
-      instance: myapp-helm-canary
+      app: myapp
+      instance: canary
   replicas: {{ .Values.canary.replicas }}
   template:
     metadata:
       labels:
-        app: myapp-helm
-        instance: myapp-helm-canary
+        app: myapp
+        instance: canary
     spec:
       containers:
       - name: myapp-helm-canary
