--- a/strategies/canary/03-traffic-splitting-with-nginx/canary-chart/templates/service-canary.yaml
+++ b/strategies/canary/03-traffic-splitting-with-nginx/canary-chart/templates/service-canary.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp-ingress
+  name: myapp-canary
 spec:
   selector:
-    app: myapp-ingress
-    instance: myapp-ingress-stable
+    app: myapp
+    instance: canary
   ports:
   - name: metrics
     port: 8000
