--- a/strategies/canary/03-traffic-splitting-with-nginx/canary-chart/templates/service.yaml
+++ b/strategies/canary/03-traffic-splitting-with-nginx/canary-chart/templates/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp-ingress-canary
+  name: myapp
 spec:
   selector:
-    app: myapp-ingress
-    instance: myapp-ingress-canary
+    app: myapp
+    instance: stable
   ports:
   - name: metrics
     port: 8000
