--- a/strategies/canary/04-flagger-with-nginx/manifests/ingress.yaml
+++ b/strategies/canary/04-flagger-with-nginx/manifests/ingress.yaml
@@ -6,10 +6,13 @@ metadata:
     app: myapp
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
-  rules: # adjust this as required if you are also using a hostname
-  - http:
+  rules:
+  - host: k8s.liammoat.com
+    http:
       paths:
-      - backend:
+      - path: /canary-flagger(/|$)(.*)
+        backend:
           serviceName: myapp
           servicePort: 8080
